[package]
name = "fast_qr"
version = "0.5.1"
authors = ["erwan.vivien <erwan.vivien@epita.fr>"]
edition = "2021"
description = "Generates optimized QRCode"
documentation = "https://docs.rs/fast_qr/latest/fast_qr/"
homepage = "https://fast-qr.com/"
readme = "README.md"
repository = "https://github.com/erwanvivien/fast_qr/"
keywords = ["qr", "qrcode", "qr-generator", "qrcode-generator",
            "qr-gen"]
categories = ["multimedia", "multimedia::encoding", "multimedia::images"]
exclude = ["/src/tests/", ".*"]
rust-version = "1.59"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
debug = true
wasm-opt = false
lto = true
opt-level = 's'

[dev-dependencies]
criterion = "0.3"
qrcode = "0.12.0"

[[bench]]
name = "qr"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
