[package]
name = "fast_qr"
version = "0.10.1"
authors = ["erwan.vivien <erwan.vivien@epita.fr>"]
edition = "2021"
description = "Generates optimized QRCode"
documentation = "https://docs.rs/fast_qr/latest/fast_qr/"
homepage = "https://fast-qr.com/"
readme = "README.md"
repository = "https://github.com/erwanvivien/fast_qr/"
keywords = ["qr", "qrcode", "qr-generator", "qrcode-generator", "qr-gen"]
categories = ["multimedia", "multimedia::encoding", "multimedia::images"]
include = ["src", "Cargo.toml", "./README.md", "./LICENSE", "benches"]
rust-version = "1.59"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
resvg = { version = "0.28.0", optional = true }

[features]
svg = []
image = ["svg", "dep:resvg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = 's'     # Optimize for size
panic = 'abort'     # About unwinding code
strip = "debuginfo"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[dev-dependencies]
base64 = "0.21.3"
criterion = "0.4"
qrcode = "0.12.0"

[[bench]]
name = "qr"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
